--- a/mischa-bg.html
+++ b/mischa-bg.html
@@ -43,6 +43,10 @@ Example:
 			}
 			#pong{
 				opacity: 0;
+				-webkit-transition: opacity 3s;
+				-moz-transition: opacity 3s;
+				-ms-transition: opacity 3s;
+				-o-transition: opacity 3s;
 				transition: opacity 3s;
 			}
 			:host([_flag]) #pong{
@@ -54,27 +58,77 @@ Example:
 				left:0;
 				width: 100%;
 				height: 100%;
+
+				-webkit-animation-name: fade;
+				-moz-animation-name: fade;
+				-ms-animation-name: fade;
+				-o-animation-name: fade;
 				animation-name: fade;
+
+				-webkit-animation-iteration-count: infinite;
+				-moz-animation-iteration-count: infinite;
+				-ms-animation-iteration-count: infinite;
+				-o-animation-iteration-count: infinite;
 				animation-iteration-count: infinite;
+
+				-webkit-animation-timing-function: linear;
+				-moz-animation-timing-function: linear;
+				-ms-animation-timing-function: linear;
+				-o-animation-timing-function: linear;
 				animation-timing-function: linear;
 			}
 			:host([no-animation]) canvas{
+				-webkit-animation-name: none;
+				-moz-animation-name: none;
+				-ms-animation-name: none;
+				-o-animation-name: none;
 				animation-name: none;
 			}
 
 			#canvas1A,
 			#canvas2A{
-				animation-name:none;
+				-webkit-animation-name: none;
+				-moz-animation-name: none;
+				-ms-animation-name: none;
+				-o-animation-name: none;
+				animation-name: none;
 			}
 			#canvas1B,
 			#canvas2B {
+				-webkit-animation-duration: 3.3s;
+				-moz-animation-duration: 3.3s;
+				-ms-animation-duration: 3.3s;
+				-o-animation-duration: 3.3s;
 				animation-duration: 3.3s;
 			}
 			#canvas1C,
 			#canvas2C {
-				animation-duration: 6.7s;
+				-webkit-animation-duration: 7.4s;
+				-moz-animation-duration: 7.4s;
+				-ms-animation-duration: 7.4s;
+				-o-animation-duration: 7.4s;
+				animation-duration: 7.4s;
 			}
-
+			@-webkit-keyframes fade {
+				0% { opacity: 0; }
+				50% { opacity: 1; }
+				100% { opacity: 0; }
+			}
+			@-moz-keyframes fade {
+				0% { opacity: 0; }
+				50% { opacity: 1; }
+				100% { opacity: 0; }
+			}
+			@-ms-keyframes fade {
+				0% { opacity: 0; }
+				50% { opacity: 1; }
+				100% { opacity: 0; }
+			}
+			@-o-keyframes fade {
+				0% { opacity: 0; }
+				50% { opacity: 1; }
+				100% { opacity: 0; }
+			}
 			@keyframes fade {
 				0% { opacity: 0; }
 				50% { opacity: 1; }
